--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pytest>=8.3.4", "ruff>=0.9.7"]
+dev = ["pre-commit>=4.1.0", "pytest>=8.3.4", "ruff>=0.9.7"]
 
 [tool.ruff]
 line-length = 100
