--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
       - id: detect-private-key
         types: [toml]
       - id: name-tests-test
+        args: ["--pytest-test-first"]
       - id: no-commit-to-branch
       - id: trailing-whitespace
         types: [text]
