--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,8 @@ quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib", # https://docs.pytest.org/en/stable/explanation/goodpractices.html#which-import-mode
+]
