--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pre-commit>=4.1.0", "pytest>=8.3.4", "ruff>=0.9.7"]
+dev = [
+    "pre-commit>=4.1.0",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.3",
+    "ruff>=0.9.7",
+]
 
 [tool.ruff]
 line-length = 100
