--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ extend-ignore = [
     "D100",   # D100 - Module dostrings not required in test files.
     "D104",   # D104 - Package dostrings not required in test files.
     "ARG",    # ARG - Unused args are common in tests with mock patches and mock functions.
+    "SLF001", # Testig my own class demands private member access.
 ]
 
 "**/*/__init__.py" = [
