--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,3 +80,5 @@ line-ending = "auto"
 addopts = [
     "--import-mode=importlib", # https://docs.pytest.org/en/stable/explanation/goodpractices.html#which-import-mode
 ]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
