Add fastapi[standard]>=0.115.8 dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "fastapi[standard]>=0.115.8",
     "pre-commit>=4.1.0",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.3",
