--- a/.github/workflows/check_code_style.yaml
+++ b/.github/workflows/check_code_style.yaml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   style-check:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
